corrected page layout issues

--- a/styles/index.css
+++ b/styles/index.css
@@ -213,10 +213,11 @@ aside body {font-family: Verdana, sans-serif;}
 /* Month header */
 .month {
     padding: 70px 25px;
-    width: 89.5%;
+    width: 100%;
     height: 5px;
     background: #1abc9c;
     text-align: center;
+
 }
 
 /* Month list */
@@ -320,17 +321,18 @@ footer ul li:hover {
 
 #lefttext{
     padding-top: 10px;
+    margin: 0;
 }
 
 #centertext{
     padding-top: 20px;
+   margin: 0;
 }
 
 #righttext {
     text-align: right;
     padding-top: 50px;
-    padding-right: 40px;
-}
+margin: 0;}
 
 
 
